# opentelemetry-cpp

api/: BUILD
api/include/opentelemetry/trace/: span-context.h  span.h  trace-c.h  tracer-registry.h  tracer.h
api/src/opentelemetry/trace/: span-context.cc  span.cc  trace-c.cc  tracer.cc
api/test/trace/: BUILD  CMakeLists.txt  span-context_unittest.cc  span_unittest.cc  tracer_unittest.cc
ci/: do_ci.sh
